--- a/charts/ghost/requirements.yaml
+++ b/charts/ghost/requirements.yaml
@@ -1,7 +1,7 @@
 dependencies:
-- name: mariadb
+- name: bitnami/mariadb
   version: 7.x.x
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: https://charts.bitnami.com/bitnami
   condition: mariadb.enabled
   tags:
     - ghost-database
