--- a/charts/ghost/requirements.yaml
+++ b/charts/ghost/requirements.yaml
@@ -1,6 +1,6 @@
 dependencies:
 - name: bitnami/mariadb
-  version: 7.x.x
+  version: 10.5.8
   repository: https://charts.bitnami.com/bitnami
   condition: mariadb.enabled
   tags:
