--- a/charts/ghost/requirements.yaml
+++ b/charts/ghost/requirements.yaml
@@ -1,6 +1,6 @@
 dependencies:
-- name: mariadb
-  version: 10.5.8
+- name: bitnami/mariadb
+  version: 9.0.1
   repository: https://charts.bitnami.com/bitnami
   condition: mariadb.enabled
   tags:
